fix z-index div info and error

--- a/apps/maarch_entreprise/css/styles.css
+++ b/apps/maarch_entreprise/css/styles.css
@@ -295,7 +295,7 @@ a.authorize {
     /*height: 50px;*/
     /*min-height: 50px;*/
     position: fixed;
-    z-index: 10;
+    z-index: 1011;
     vertical-align: middle;
     right: 10px;
     top: 10px;
@@ -321,7 +321,7 @@ a.authorize {
     /*height: 50px;*/
     /*min-height: 50px;*/
     position: fixed;
-    z-index: 10;
+    z-index: 1011;
     vertical-align: middle;
     right: 10px;
     top: 10px;
